# highscore-api

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/: 20230101231336_scores.down.sql  20230101231336_scores.up.sql
src/: data.rs  main.rs  routes.rs  score_entry.rs  tests.rs
src/data/: db.rs  guards.rs  score_entry.rs
src/data/guards/: rate_limit_guard.rs
src/routes/: score.rs
