[package]
name = "highscore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket-governor = "0.1.0-rc.4"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
